# CRT

./: Cargo.toml
backend-boilerplate/: Cargo.toml
backend-vulkan/: Cargo.toml
backend-vulkan/src/: lib.rs
chopper-runtime/: Cargo.toml
chopper-runtime/src/: buffer_types.rs  buffer_view.rs  device_context.rs  executors.rs  functor.rs  interpreter.rs  lib.rs  session.rs  tensor_types.rs  tensors.rs  vkgpu_executor.rs  vm.rs
chopper-runtime/src/assembler/: assembler_base.rs  mod.rs  parse_helper.rs  parse_instruction.rs  parse_literal.rs  parse_module.rs  parse_opcode.rs  parse_operand.rs  parse_type.rs
chopper-runtime/src/base/: errors.rs  kernel.rs  mod.rs
chopper-runtime/src/buffer_view/: mod.rs
chopper-runtime/src/device_context/: mod.rs  new_device_context.rs
chopper-runtime/src/functor/: legacy_functor.rs  new_functor.rs
chopper-runtime/src/instance/: mod.rs
chopper-runtime/src/instruction/: mod.rs
chopper-runtime/src/interpreter/: new_interpreter.rs
chopper-runtime/src/kernel/: kernel_registry.rs  mod.rs  new_kernel_registry.rs
chopper-runtime/src/session/: mod.rs  new_session.rs
chopper-runtime/src/vm/: mod.rs  new_vm.rs
demos/: Cargo.toml
demos/benches/: mnist_bench.rs
demos/bert-block/: main.rs
demos/blas-test/: main.rs
demos/crt-raptors/: main.rs
demos/data-deps/: diamtask.rs  main.rs  seqtask.rs
demos/demo-standalone/: device_context.rs  session.rs
demos/onnx-mnist/: main.rs
demos/onnx-resnet/: main.rs
hal/: Cargo.toml
utils/: Cargo.toml
