[package]
name = "chopper-runtime"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chopper_runtime"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Albert Shi"]
crate-type = ["dylib", "rlib"]
path = "src/lib.rs"

[dependencies]
log = "0.4"
ash = "0.32"
env_logger = "0.8"
glsl-to-spirv = "0.1.4"
nom = "^4.0"
float_eq = "0.7.0"
transpose = "0.2.1"

hal = { path = "../hal", package = "gfx-hal", version = "0.9.0" }
raptors = { path = "../../Raptors/raptors", package = "raptors", version = "0.1.0"}
# hal = { package = "gfx-hal", version = "0.9.0" }
auxil = { path = "../utils", package = "crt-utils", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3.3" }
ndarray = "0.13"
numpy = "0.15"

# deps to use raptors
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.15" }
opentelemetry = { version = "0.17.0" }
tracing-opentelemetry = { version = "0.17.2" }
opentelemetry-jaeger = { version = "0.16.0" }

# optional features
backend-vulkan = { path = "../backend-vulkan", optional=true, package = "backend-vulkan", version = "0.9.0" }
rublas = { path = "../../rublas410/rublas/", version = "0.1", optional=true, features = [ "openblas" ] }


[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

# TODO add conditional-deps on features setting
[features]
default = ["backend-vulkan"]
mock = ["backend-vulkan", "rublas"]
vulkan = ["backend-vulkan"]
blas = ["backend-vulkan", "rublas"]
