
[package]
name = "chopper-demos"
version = "0.1.0"
publish = false
workspace = ".."
edition = "2021"

[[bin]]
name = "blastest"
path = "blas-test/main.rs"

# example case that is use to tune eager/lazy/parallel behaviours on differing data-dependency patterns
# we use sequence (A -> B -> C); diamond (A -> B | C -> D)
[[bin]]
name = "seqtask"
path = "data-deps/seqtask.rs"

[[bin]]
name = "diamtask"
path = "data-deps/diamtask.rs"

[[bin]]
name = "crt_test"
path = "crt-raptors/main.rs"

[dependencies]
log = "0.4"
hal = { path = "../hal", package = "gfx-hal", version = "0.9.0" }
chopper-runtime = { path = "../chopper-runtime", package = "chopper-runtime", version = "0.1.0" }
# hal = { package = "gfx-hal", version = "0.9.0" }
ash = "0.32"
auxil = { path = "../utils", package = "crt-utils", version = "0.1" }
backend-vulkan = { path = "../backend-vulkan", package = "backend-vulkan", version = "0.9.0" }
env_logger = "0.8"
glsl-to-spirv = "0.1.4"
nom = "^4.0"
float_eq = "0.7.0"

tracing-subscriber = { version = "0.3.15" }
opentelemetry = { version = "0.17.0" }
tracing-opentelemetry = { version = "0.17.2" }
opentelemetry-jaeger = { version = "0.16.0" }
